<resources>
    <string name="app_name">Parking</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_reservation">My Reservations</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="parking_name">"Parking name"</string>
    <string name="parking_level">"Parking level"</string>
    <string name="parking_zone">"Parking zone"</string>
    <string name="parking_spot">"Parking spot"</string>
    <string name="start_time">"Started"</string>
    <string name="end_time">"Ended"</string>
    <string name="cost">"Cost"</string>
    <string name="notes">"Notes"</string>
    <string name="home">Home</string>
    <string name="reservation_new">New Reservation</string>
    <string name="my_reservations">My Reservations</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_user_profile">My Profile</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="invalid_login">Invalid Login Attempt</string>
    <string name="login_username">Username/Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="user_username">Username</string>
    <string name="user_email">Email</string>
    <string name="user_name">Name</string>
    <string name="user_birthday">Birthday</string>
    <string name="create_account">Create Account</string>
    <string name="user_birthday_example">01/01/2001</string>
    <string name="user_name_example">John Doe</string>
    <string name="user_email_example">john_doe@email.com</string>
    <string name="user_username_example">johnDoe123</string>
    <string name="user_password">pass123</string>
    <string name="licence_plate">Licence Plate</string>
    <string name="licence_plate_example">HD10JON</string>
    <string name="credit_card_number">Credit Card Number</string>
    <string name="credit_card_number_example">0000 0000 0000 0000</string>
    <string name="credit_card_exp_month">MM</string>
    <string name="credit_card_exp_year">YY</string>
    <string name="ccv">CCV</string>
    <string name="ccv_example">000</string>
    <string name="reserve">Reserve</string>
    <string name="starting_at">starting at hh:mm</string>
    <string name="starting_at_example">2018-11-30T18:35:24.00Z</string>
    <string name="ending_at">ending at hh:mm</string>
    <string name="date">pick date</string>
    <string name="password_confirm">Re-type Password</string>
    <string name="save">Save</string>
    <string name="phone">Phone Number</string>
    <string name="phone_example">1234567890</string>
    <string name="time_left">Time Left till next reservation</string>
    <string name="days_left">Days</string>
    <string name="remove">Remove</string>
    <string name="claim">Claim</string>
    <string name="minutes_left">Min</string>
    <string name="hours_left">Hours</string>
    <string name="release">Release</string>
    <string name="upcoming_reservations">My upcoming reservations</string>
    <string name="create_reservations">Create reservation</string>
    <string name="invalid_date_format">Hours must be hh:mm format</string>
    <string name="ip_address">http://192.168.0.94:8000/</string>
    <string name="parking_details">Parking: Test Spot: A0 Level: 0</string>
</resources>