<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/prompt_password"
        android:ems="10"
        android:id="@+id/user_profile_password_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:autofillHints="@string/user_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_confirm"
        android:ems="10"
        android:id="@+id/user_profile_password_confirm_id"
        android:layout_below="@+id/user_profile_password_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:autofillHints="@string/user_password" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/user_profile_user_email_id"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/user_profile_password_confirm_id"
        android:layout_centerHorizontal="true"
        android:hint="@string/user_email"
        android:autofillHints="@string/user_email_example" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/phone"
        android:ems="10"
        android:id="@+id/user_profile_phone_number_id"
        android:layout_below="@+id/user_profile_user_email_id"
        android:layout_marginTop="23dp"
        android:layout_centerHorizontal="true"
        android:autofillHints="@string/phone_example" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/licence_plate"
        android:ems="10"
        android:id="@+id/user_profile_vehicle_licence_plate_id"
        android:layout_below="@+id/user_profile_phone_number_id"
        android:layout_marginTop="23dp"
        android:layout_centerHorizontal="true"
        android:autofillHints="@string/licence_plate_example" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/credit_card_number"
        android:ems="10"
        android:id="@+id/user_profile_credit_card_number_id"
        android:layout_below="@+id/user_profile_vehicle_licence_plate_id"
        android:layout_marginTop="23dp"
        android:layout_centerHorizontal="true"
        android:autofillHints="@string/credit_card_number_example"
         />

    <Spinner
        android:id="@+id/user_profile_credit_card_exp_month_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_profile_credit_card_number_id"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/credit_card_exp_month"
        android:spinnerMode="dropdown"
        android:dropDownHeight="100dp"
        android:layout_marginStart="120dp" />

    <Spinner
        android:id="@+id/user_profile_credit_card_exp_year_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_profile_credit_card_number_id"
        android:layout_toEndOf="@+id/user_profile_credit_card_exp_month_id"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:layout_marginLeft="200dp"
        android:hint="@string/credit_card_exp_year"
        android:layout_marginStart="120dp"
        android:spinnerMode="dropdown"
        android:dropDownHeight="100dp"
        android:layout_toRightOf="@+id/user_profile_credit_card_exp_month_id" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/ccv"
        android:ems="10"
        android:id="@+id/user_profile_credit_card_ccv_id"
        android:layout_below="@+id/user_profile_credit_card_exp_year_id"
        android:layout_marginTop="23dp"
        android:layout_centerHorizontal="true"
        android:autofillHints="@string/ccv_example" />


    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:bootstrapBrand="success"
        android:id="@+id/user_profile_save_btn_id"
        android:layout_below="@+id/user_profile_credit_card_ccv_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" />

</RelativeLayout>