<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ro.upet.parking.system.management.activities.MainActivity">
    <item
        android:id="@+id/menu_home_id"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never"
        android:icon="@drawable/home_icon"
        >
    </item>
    <item
        android:id="@+id/menu_new_reservation_id"
        android:orderInCategory="100"
        android:title="@string/reservation_new"
        app:showAsAction="never"
        android:icon="@drawable/reservation_icon"
        >
    </item>
    <item
        android:id="@+id/menu_my_reservations_id"
        android:orderInCategory="100"
        android:title="@string/my_reservations"
        app:showAsAction="never"
        android:icon="@drawable/history_icon"
        >
    </item>
    <item
        android:id="@+id/menu_my_profile_id"
        android:orderInCategory="100"
        android:title="@string/my_profile"
        app:showAsAction="never"
        android:icon="@drawable/profile_icon"
        >
    </item>
    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never"
        android:icon="@drawable/log_out_icon"
        >
    </item>
</menu>