<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Spinner
        android:id="@+id/reservation_parking_names_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:spinnerMode="dropdown"
        android:layout_centerHorizontal="true" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:bootstrapBrand="info"
        android:id="@+id/reservation_date_btn_id"
        android:layout_below="@+id/reservation_parking_names_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />


    <TextView
        android:id="@+id/reservation_selected_date_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/reservation_date_btn_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        />

    <EditText
        android:id="@+id/reservation_start_time_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reservation_selected_date_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/starting_at"
        android:inputType="text"
        android:autofillHints="@string/starting_at_example" />

    <EditText
        android:id="@+id/reservation_end_time_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reservation_start_time_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/ending_at"
        android:inputType="text"
        android:autofillHints="@string/starting_at_example" />

    <TextView
        android:id="@+id/reservation_invalid_time_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/reservation_end_time_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:textColor="@color/bootstrap_brand_danger"
        android:text="@string/invalid_date_format"
        />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reserve"
        app:bootstrapBrand="success"
        android:id="@+id/reservation_reserve_btn_id"
        android:layout_below="@+id/reservation_invalid_time_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />
</RelativeLayout>