<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bootstrap_alert_cross_default"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/login_invalid_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_login"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/bootstrap_brand_danger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        />

    <ImageView
        android:layout_width="@dimen/login_icon_width"
        android:layout_height="@dimen/login_icon_height"
        android:id="@+id/login_image"
        android:layout_marginTop="16dp"
        android:background="@drawable/profile_icon"
        android:layout_below="@+id/login_invalid_id"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/login_username_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/login_username"
        android:inputType="text"
        android:textSize="@dimen/login_text_size"
        />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/login_password_id"
        android:layout_below="@+id/login_username_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:textSize="@dimen/login_text_size"
        android:hint="Password"
        />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_button_id"
        android:layout_below="@+id/login_password_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="@dimen/login_text_size"
        app:bootstrapBrand="primary"
        />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/register"
        android:id="@+id/login_create_account_id"
        android:layout_below="@+id/login_button_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        app:bootstrapBrand="secondary"
        android:textSize="@dimen/login_text_size"
        />


</RelativeLayout>